added the html code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
         <div class="box">
             <img src="/DonyaSoft Wallpaper (8).jpg" alt="Music image">
-
+        </div>
+        <div>
+            <h1 class="musc_name">Music Name</h1>
+            <p class="musc_dec">muscit desc</p>
         </div>
     </div>
 </body>
