style the details

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <div class="container">
         <div class="box">
             <img src="/DonyaSoft Wallpaper (8).jpg" alt="Music image">
+           <div class="details">
+               <h1 class="music_name">music name</h1>
+               <p class="music_artist">artist</p>
+            </div>
         </div>
-        <div>
-            <h1 class="musc_name">Music Name</h1>
-            <p class="musc_dec">muscit desc</p>
-        </div>
-    </div>
+        
+</div>
+
 </body>
 </html>
