added the ply btn

--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
            <div class="details">
                <h1 class="music_name">music name</h1>
                <p class="music_artist">artist</p>
+               <div class="song_slider">
+                   <input class="range-control" type="range" value="0">
+                   <span class="current_time">00</span>
+                   <span class="duration_time">00</span>
+               </div>
+               <div class="controls">
+                   <div class="ply_btn">
+                       <span></span>
+                       <span></span>
+                   </div>
+               </div>
             </div>
         </div>
+
         
 </div>
 
