--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="box">
-            <img src="/DonyaSoft Wallpaper (8).jpg" alt="Music image">
+            <img src="/DonyaSoft Wallpaper (8).jpg" alt="Music image" class="img">
            <div class="details">
                <h1 class="music_name">music name</h1>
                <p class="music_artist">artist</p>
@@ -20,9 +20,11 @@
                    <span class="duration_time">00</span>
                </div>
                <div class="controls">
-                   <div class="ply_btn">
+                   <div class="backwardBtn btn"><img src="img/back_to_64px.png" alt=""></div>
+                   <div class="ply_btn pause">
                        <span></span>
                        <span></span>
+                       <div class="forwardBtn btn"><img src="img/next_page_64px.png" alt=""></div>
                    </div>
                </div>
             </div>
