added the font awosme

--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
         <div class="box">
-           <div class="details">
-               <h1 class="music_name">music name</h1>
-               <p class="music_artist">artist</p>
+           <div class="details ">
+               <div class="box-img">
+            </div>
+
+                   <h1 class="music_name">music name</h1>
+                   <p class="music_artist">artist</p>
+
                <div class="song_slider">
                    <input class="range-control" type="range" value="0">
                    <span class="current_time">00</span>
                    <span class="duration_time">00</span>
-               </div>
+                </div>
                <div class="controls">
-                   <button class="backwardBtn btn"><img src="img/back_to_64px.png" alt=""></button>
                    <div class="ply_btn pause">
                        <span></span>
                        <span></span>
-                       <button class="forwardBtn btn"><img src="img/next_page_64px.png" alt=""></button>
-                   </div>
+                    </div>
                </div>
             </div>
         </div>
