--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <div class="box">
+            <div class="img-section">
+                <img src="/DonyaSoft Wallpaper (8).jpg" alt="">
+            </div>
            <div class="details ">
-               <div class="box-img">
-            </div>
-
-                   <h1 class="music_name">music name</h1>
-                   <p class="music_artist">artist</p>
-
+               <h1 class="music_name">music name</h1>
+               <p class="music_artist">artist</p>
                <div class="song_slider">
-                   <input class="range-control" type="range" value="0">
-                   <span class="current_time">00</span>
-                   <span class="duration_time">00</span>
+                   <input type="range" value="0" class="range-control">
+                   <span class="current_time">00:00</span>
+                   <span class="duration_time">00:00</span>
+                   <div class="controls">
+                       <div class="btn"><img src="img/back_to_64px.png" alt=""></div>
+                       <div class="ply_btn">
+                           <span></span>
+                           <span></span>
+                       </div>
+                       <div class="btn"><img src="img/next_page_64px.png" alt=""></div>
+                   </div>
                 </div>
-               <div class="controls">
-                   <div class="ply_btn pause">
-                       <span></span>
-                       <span></span>
-                    </div>
-               </div>
             </div>
+        </div>
         </div>
 
         
