--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                    <input type="range" value="0" class="range-control">
                    <span class="current_time">00:00</span>
                    <span class="duration_time">00:00</span>
+                </div>
                    <div class="controls">
-                       <div class="btn"><img src="img/back_to_64px.png" alt=""></div>
-                       <div class="ply_btn">
+                       <div class="btn btnBack"><img src="img/back_to_64px.png" alt=""></div>
+                       <div class="ply_btn pause">
                            <span></span>
                            <span></span>
                        </div>
-                       <div class="btn"><img src="img/next_page_64px.png" alt=""></div>
+                       <div class="btn btnNext"><img src="img/next_page_64px.png" alt=""></div>
                    </div>
-                </div>
             </div>
         </div>
         </div>
