--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="box">
             <div class="img-section">
-                <img src="/DonyaSoft Wallpaper (8).jpg" alt="">
+                <img src="./DonyaSoft Wallpaper (8).jpg" alt="">
             </div>
            <div class="details ">
                <h1 class="music_name">music name</h1>
