responsive the  dektop  state

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                    <div class="controls">
                        <div class="btn btnBack"><img src="img/back_to_64px.png" alt=""></div>
-                       <div class="ply_btn pause">
+                       <div class="ply_btn paus">
                            <span></span>
                            <span></span>
                        </div>
