--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
                     <span class="current_time">00:00</span>
                     <span class="duration_time">00:00</span>
                 </div>
-                    <div class="controls">
+                    <!-- <div class="controls">
                         <div class="btn btnBack"><img src="img/back_to_64px.png" alt=""></div>
                         <div class="ply_btn paus">
                             <span></span>
                             <span></span>
                         </div>
-                        <div class="btn btnNext"><img src="img/next_page_64px.png" alt=""></div>
-                        
-                    </div>
-            </div>
+                        <div class="btn btnNext"><img src="img/next_page_64px.png" alt=""></div>                        
+                    </div> -->
+                </div>
         </div>
         </div>
 
