--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Music Player</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -18,7 +19,7 @@
                 <h1 class="music_name">music name</h1>
                 <p class="music_artist">artist</p>
                 <div class="song_slider">
-                    <input type="range" value="0" class="range-control">
+                    <input type="range" min="0" max="100" value="0" class="range-control">
                     <span class="current_time">00:00</span>
                     <span class="duration_time">00:00</span>
                 </div>
@@ -34,8 +35,6 @@
         </div>
         </div>
 
-        
 </div>
-
 </body>
 </html>
