--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="box">
             <div class="img-section">
-                <img src="./DonyaSoft Wallpaper (8).jpg" alt="">
+                <img class="imgduration" src="./DonyaSoft Wallpaper (8).jpg" alt="">
             </div>
            <div class="details ">
                <h1 class="music_name">music name</h1>
@@ -24,7 +24,7 @@
                 </div>
                    <div class="controls">
                        <div class="btn btnBack"><img src="img/back_to_64px.png" alt=""></div>
-                       <div class="ply_btn paus">
+                       <div class="ply_btn">
                            <span></span>
                            <span></span>
                        </div>
@@ -36,6 +36,6 @@
 
         
 </div>
-
+<script src="./script.js"></script>
 </body>
 </html>
