added the audio tag

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./asssets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
+    <audio src="" id="audio"></audio>
     <div class="container">
         <div class="box">
             <div class="img-section">
-                <img class="imgduration" src="./DonyaSoft Wallpaper (8).jpg" alt="">
+                <div class="disk imgduration"></div>
             </div>
            <div class="details ">
                <h1 class="music_name">music name</h1>
@@ -28,7 +29,7 @@
                            <span></span>
                            <span></span>
                        </div>
-                       <div class="btn btnNext"><img src="img/next_page_64px.png" alt=""></div>
+                       <div class="btn btnNext"><img src="img/fast_forward_24px.png" alt=""></div>
                    </div>
             </div>
         </div>
@@ -36,6 +37,6 @@
 
         
 </div>
-<script src="./script.js"></script>
+<script src="./asssets/script.js"></script>
 </body>
 </html>
