--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <audio src="" id="audio"></audio>
+    <!-- <audio src="" id="audio"></audio> -->
     <div class="container">
         <div class="box">
             <div class="img-section">
@@ -25,7 +25,7 @@
                 </div>
                    <div class="controls">
                        <div class="btn btnBack"><img src="img/back_to_64px.png" alt=""></div>
-                       <div class="ply_btn">
+                       <div class="ply_btn " >
                            <span></span>
                            <span></span>
                        </div>
