--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 class="music_name">music name</h1>
                 <p class="music_artist">artist</p>
                 <div class="song_slider">
-                    <input type="range" min="0" max="100" value="0" class="range-control">
+                    <input type="range" min="0" max="100" value="0" class="range-control" onclick="seekTo()">
                     <span class="current_time">00:00</span>
                     <span class="duration_time">00:00</span>
                 </div>
