--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="container">
         <div class="box">
             <div class="img-section">
-                <img src="images/DonyaSoft Wallpaper (8).jpg" class="music-img" alt="">
+                <img src="" class="music-img" alt="">
             </div>
             <div class="details ">
                 <h1 class="music_name">music name</h1>
                 <p class="music_artist">artist</p>
                 <div class="song_slider">
-                    <input type="range" min="0" max="100" value="0" class="range-control" onclick="seekTo()">
+                    <input type="range" min="0" max="100" value="0" class="range-control" onclick="goTo()">
                     <span class="current_time">00:00</span>
                     <span class="duration_time">00:00</span>
                 </div>
