--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -23,12 +24,16 @@
                     <span class="duration_time">00:00</span>
                 </div>
                     <div class="controls">
-                        <div class="btn btnBack"><img src="img/back_to_64px.png" alt=""></div>
+                        <div class="btn btnBack" onclick="prevMucis()">
+                            <i class="fa-solid fa-backward fa-2x"></i>             
+                        </div>
                         <div class="ply_btn pause" onclick="playPause()">
                             <span></span>
                             <span></span>
                         </div>
-                        <div class="btn btnNext"><img src="img/next_page_64px.png" alt=""></div>                        
+                        <div class="btn btnNext" onclick="nextMusic()">
+                            <i class="fa-solid fa-forward fa-2x"></i>
+                        </div>                        
                     </div>
                 </div>
         </div>
