fontaweson is added for fast forward and backward.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
                         <div class="btn btnBack" onclick="prevMucis()">
                             <i class="fa-solid fa-backward fa-2x"></i>             
                         </div>
+                        <div class="btn fast-forward" onclick="fastBackward()">
+                            <i class="fa-solid fa-backward-fast"></i>
+                        </div>
                         <div class="ply_btn pause" onclick="playPause()">
                             <span></span>
                             <span></span>
+                        </div>
+                        <div class="btn fast-backward" onclick="fastForward()">
+                            <i class="fa-solid fa-forward-fast"></i>
+
                         </div>
                         <div class="btn btnNext" onclick="nextMusic()">
                             <i class="fa-solid fa-forward fa-2x"></i>
