fontawesome added for play button.

--- a/index.html
+++ b/index.html
@@ -24,21 +24,20 @@
                     <span class="duration_time">00:00</span>
                 </div>
                     <div class="controls">
-                        <div class="btn btnBack" onclick="prevMucis()">
+                        <div class="btnBack" onclick="prevMucis()">
                             <i class="fa-solid fa-backward fa-2x"></i>             
                         </div>
-                        <div class="btn fast-forward" onclick="fastBackward()">
-                            <i class="fa-solid fa-backward-fast"></i>
+                        <div class="fast-forward" onclick="fastBackward()">
+                            <i class="fa-solid fa-backward-fast fa-2x"></i>
                         </div>
-                        <div class="ply_btn pause" onclick="playPause()">
-                            <span></span>
-                            <span></span>
+                        <div class="ply_btn pause" onclick="playPause()" data-digit="32">
+                            <i class="fa fa-play-circle fa-5x" style="color: black"></i>
                         </div>
-                        <div class="btn fast-backward" onclick="fastForward()">
-                            <i class="fa-solid fa-forward-fast"></i>
+                        <div class="fast-backward" onclick="fastForward()">
+                            <i class="fa-solid fa-forward-fast fa-2x"></i>
 
                         </div>
-                        <div class="btn btnNext" onclick="nextMusic()">
+                        <div class="btnNext" onclick="nextMusic()">
                             <i class="fa-solid fa-forward fa-2x"></i>
                         </div>                        
                     </div>
